--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,17 @@
 [package]
 name = "lmc-assembly"
-version = "0.1.2"
+version = "0.1.3"
 edition = "2021"
 license = "MIT"
 description = "A library for assembling and running LMC (Little Man Computer) programs."
 authors = ["Ethan Coward <ethan@ethancoward.dev>"]
 repository = "https://github.com/CDE90/lmc-assembly"
 readme = "README.md"
+
+[features]
+serde = ["dep:serde", "dep:serde_derive", "dep:serde_arrays"]
+
+[dependencies]
+serde = { version = "1.0", optional = true }
+serde_derive = { version = "1.0", optional = true }
+serde_arrays = { version = "0.1", optional = true }
